frontend/test/should_fail/index_asArrayAscending_fromto_argument2_mismatch.grg
#using "index_where_non_index_expected_model.gm"

rule i {
	if{ nodesFromIndexFromToAsArrayAscending(fooi, 42, 42.0).size() > 0; }
	
	modify {
	}
}
